# altinf

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Caddyfile  Dockerfile  deploy.sh  docker-compose.yml  wt_config.xml
.claude/: settings.json
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-04-29-live-hub-dynamic-updates.md  2026-05-04-cookie-auth.md  2026-05-05-gantt-filter-and-default-start-date.md  2026-05-05-navbar-login-autofocus-enter-key.md  2026-05-05-task-types.md  2026-05-06-task-history.md  2026-05-10-task-comments.md  2026-05-10-task-permissions.md  2026-05-11-caddy-reverse-proxy.md  2026-05-11-clean-urls.md
docs/superpowers/specs/: 2026-04-29-live-hub-dynamic-updates-design.md  2026-05-05-gantt-filter-and-default-start-date-design.md  2026-05-05-navbar-login-autofocus-enter-key-design.md  2026-05-05-task-types-design.md  2026-05-06-task-history-design.md  2026-05-10-task-comments-design.md  2026-05-10-task-permissions-design.md  2026-05-11-caddy-reverse-proxy-design.md  2026-05-11-clean-urls-design.md
e2e/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
e2e/patches/: playwright-core+1.59.1.patch
e2e/specs/: blog.spec.ts  board.spec.ts  comments.spec.ts  gantt.spec.ts  home.spec.ts  links.spec.ts  live-board.spec.ts  live-nav-accounts.spec.ts  live-org-landing.spec.ts  live-org-manage.spec.ts  live-task-editor.spec.ts  live-task-types.spec.ts  login.spec.ts  notifications.spec.ts  task-history.spec.ts  task-permissions.spec.ts
posts/: 2026-04-21-hello-world.md
resources/css/: altinf.css
resources/js/: gantt.js  kanban.js
resources/scss/: _accounts.scss  _base.scss  _blog.scss  _contrast.scss  _gantt.scss  _kanban.scss  _layout.scss  _links.scss  _login.scss  _org.scss  _variables.scss  _wt.scss  altinf.scss
src/: altinf_app.cpp  altinf_app.h  altinf_app.hpp  main.cpp
src/api/: post_api_resource.cpp  post_api_resource.h  post_api_resource.hpp
src/auth/: api_token.h  permission.h  permission.hpp  session_data.h  session_data.hpp  session_token.hpp  user.h  user.hpp  user_db.cpp  user_db.h  user_db.hpp
src/blog/: blog_loader.cpp  blog_loader.h  blog_loader.hpp  blog_post.hpp  post_writer.cpp  post_writer.h  post_writer.hpp
src/gantt/: gantt.hpp  gantt_db.cpp  gantt_db.h  gantt_db.hpp
src/kanban/: gantt_view_widget.cpp  gantt_view_widget.hpp  kanban.hpp  kanban_board_widget.cpp  kanban_board_widget.hpp  kanban_db.cpp  kanban_db.hpp  team_cap.hpp
src/links/: link.h  link.hpp  link_db.cpp  link_db.h  link_db.hpp
src/org/: org.hpp  org_db.cpp  org_db.hpp
src/pages/: account_editor_page.cpp  account_editor_page.h  account_editor_page.hpp  account_manager_page.cpp  account_manager_page.h  account_manager_page.hpp  blog_page.cpp  blog_page.h  blog_page.hpp  blog_post_page.cpp  blog_post_page.h  blog_post_page.hpp  gantt_editor_page.cpp  gantt_editor_page.h  gantt_editor_page.hpp  gantt_list_page.cpp  gantt_list_page.h  gantt_list_page.hpp  gantt_view_page.cpp  gantt_view_page.h  gantt_view_page.hpp  kanban_archive_page.cpp  kanban_archive_page.hpp  kanban_board_page.cpp  kanban_board_page.hpp  kanban_task_editor_page.cpp  kanban_task_editor_page.hpp  kanban_team_page.cpp  kanban_team_page.hpp  link_editor_page.cpp  link_editor_page.h  link_editor_page.hpp  links_page.cpp  links_page.h  links_page.hpp  login_page.cpp  login_page.h  login_page.hpp  main_page.cpp  main_page.hpp  (+13 more)
src/widgets/: footer.cpp  footer.h  live_hub.cpp  live_hub.hpp  nav_bar.cpp  nav_bar.h  nav_bar.hpp  notification_bell.cpp  notification_bell.hpp  notification_hub.cpp  notification_hub.hpp
tests/: CMakeLists.txt  test_blog_loader.cpp  test_gantt_db.cpp  test_kanban_db.cpp  test_link_db.cpp  test_live_hub.cpp  test_notification_hub.cpp  test_org_db.cpp  test_permissions.cpp  test_team_cap.cpp  test_user_db.cpp
tests/js/: package-lock.json  package.json  test_gantt.js
